# pilo

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: editor.h  vec2.h
include/actions/: action.h  delete_action.h  move_cursor_action.h  quit_action.h  save_file_action.h  write_action.h
src/: CMakeLists.txt  editor.cpp  main.cpp
